--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-multichar -g3 -std=c11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-multichar -g3 -std=c++14")
 include_directories(../include)
 
-add_executable(test_insight test.cc virtual.cc typeof.cc)
+add_executable(test_insight test.cc virtual.cc typeof.cc class.cc)
 target_link_libraries(test_insight insight gtest)
